kubernetes/apps/kube-system/cilium/netpols/allow-egress-gateway-external.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-gateway-external
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/gateway-external: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: external
            io.kubernetes.pod.namespace: network
