kubernetes/apps/kube-system/cilium/netpols/allow-egress-kubedns.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-kubedns
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/kubedns: allow
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: coredns
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
