kubernetes/apps/kube-system/cilium/netpols/allow-egress-postgres.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-postgres
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/postgres: allow
  egress:
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres-16
            postgres-operator.crunchydata.com/instance-set: postgres
            io.kubernetes.pod.namespace: infrastructure
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
