kubernetes/apps/kube-system/cilium/netpols/allow-ingress-gateway-internal.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-allow-internal
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/gateway-internal: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: internal
            io.kubernetes.pod.namespace: network
